syntax = "proto2";
package service.v1;

service BrongnalService {
  rpc RegisterPreKeyBundle(RegisterPreKeyBundleRequest) returns (RegisterPreKeyBundleResponse);
  rpc RequestPreKeys(PreKeyBundleRequest) returns (PreKeyBundle);
  rpc SendMessage(stream SendMessageRequest) returns (SendMessageResponse);
  rpc RetrieveMessages(RetrieveMessagesRequest) returns (stream ProtocolMessage);
}

message SignedPreKey {
  // X25519 public key
  optional bytes pre_key = 1;

  // ED25519 signature
  optional bytes signature = 2;
}

message SignedPreKeys {
  // X25519 public keys
  repeated bytes pre_keys = 1;

  // ED25519 signature over pre_keys.length() || pre_keys
  optional bytes signature = 2;
}

message RegisterPreKeyBundleRequest {
  // ED25519 public key
  optional bytes identity_key = 1;

  // The current signed pre key associated with `identity_key`.
  optional SignedPreKey signed_pre_key = 2;

  // Optional - Appends the one time key bundle for this `identity_key`.
  optional SignedPreKeys one_time_key_bundle = 3;

  // Firebase Cloud Messaging Token
  optional string fcmToken = 4;
}

message RegisterPreKeyBundleResponse {
	optional uint32 num_keys = 1;
}

message PreKeyBundleRequest {
  // ED25519 public key
  optional bytes identity_key = 1;
}

message PreKeyBundle {
  // ED25519 public key
  optional bytes identity_key = 1;

  // X25519 public key
  optional bytes one_time_key = 2;

  optional SignedPreKey signed_pre_key = 3;
}

message X3DHInitiationMessage {
  // ED25519 public key
  // All initiation messages contain the sending device's identity public key in an unencrypted header.
  optional bytes sender_identity_key = 1;

  // X25519 public key
  optional bytes ephemeral_key = 2;

  // X25519 public key
  optional bytes pre_key = 3;

  // X25519 public key (Optional)
  optional bytes one_time_key = 4;

  // binary
  optional bytes ciphertext = 5;
}

message RatchetMessage {
  optional bytes ciphertext = 1;
}

message ProtocolMessage {
  oneof message_type {
    X3DHInitiationMessage initiation_message = 1;
    RatchetMessage message = 2;
  }
}

message SendMessageRequest {
  optional ProtocolMessage message = 1;

  // Ed25519 public key
  optional bytes recipient_identity_key = 2;
}

message SendMessageResponse {}

message RetrieveMessagesRequest {
  // Recipients identity key.
  optional bytes identity_key = 1;

  // TODO(https://github.com/brongan/brongnal/issues/14) - Add proof of possession.
}
